Updated bnd version dependencies and reverted to JDK 8 method